# dann

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  unzip_data.py
codes_/: LocallyConnected2d.py  analysis_model_evaluation.py  analysis_model_postprocess.py  calculate_embeddings.py  figure_2.py  figure_3.py  figure_4.py  figure_5.py  figure_6.py  figure_7.py  find_best_models.py  generate_dist_graphs.py  get_all_figures.sh  jax_peak_memory_monitor.py  main.py  main_jax.py  main_pytorch.py  models.py  one_to_run_them_all.py  one_to_run_them_all.sh  opt.py  opt_jax.py  plotting_functions.py  profile_pb2.py  receptive_fields.py  requirements.txt  run_all_depth.sh  run_all_depth_test.sh  run_all_drop.sh  run_all_early_stop.sh  run_all_fig2.sh  run_all_fig3.sh  run_all_fig6B.sh  run_all_fig6D.sh  run_all_lr.sh  run_analysis_eval.sh  run_analysis_eval_depth.sh  run_analysis_eval_dropout.sh  run_analysis_eval_learn_rate.sh  suppl_figure_1.py  (+15 more)
codes_/data/results_mnist_1_layer/dend_ann_random/: model_sigma_0.0_trial_100_dends_1_soma_128.h5  results_sigma_0.0_trial_100_dends_1_soma_128.pkl
codes_/test_res/results_mnist_1_layer/dend_ann_random/: model_sigma_0.0_trial_100_dends_2_soma_32.keras  model_sigma_0.0_trial_101_dends_2_soma_32.keras  results_sigma_0.0_trial_100_dends_2_soma_32.pkl  results_sigma_0.0_trial_101_dends_2_soma_32.pkl
