[project]
name = "dann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "astunparse==1.6.3",
    "flatbuffers==24.3.25",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.65.5",
    "keras==3.5.0",
    "libclang==18.1.1",
    "matplotlib-scalebar==0.8.1",
    "ml-dtypes==0.4.0",
    "namex==0.0.8",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "palettable==3.3.3",
    "pooch==1.8.2",
    "seaborn>=0.13.2",
    "seaborn-image==0.9.0",
    "tensorboard==2.17.1",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.4.0",
]
