[project]
name = "dann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "absl-py",
    "astunparse",
    "cuml-cu12; platform_system == 'Linux'",
    "flatbuffers",
    "gast",
    "google-pasta",
    "grpcio",
    "jax",
    "jax[cuda]; platform_system == 'Linux'",
    "keras",
    "libclang",
    "matplotlib-scalebar",
    "ml-dtypes",
    "namex",
    "opt-einsum",
    "optree",
    "palettable",
    "pooch",
    "scikit-learn>=1.6.1",
    "seaborn",
    "seaborn-image",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "tensorflow-io-gcs-filesystem",
    "termcolor",
    "torch",
    "torchaudio",
    "torchvision",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
