[project]
name = "dann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "absl-py",
    "astunparse",
    "chex>=0.1.89",
    "cuml-cu12; platform_system == 'Linux'",
    "equinox>=0.11.10",
    "flatbuffers",
    "gast",
    "google-pasta",
    "grpcio",
    "ipykernel>=6.29.5",
    "ipython>=8.18.1",
    "jax",
    "jax[cuda]; platform_system == 'Linux'",
    "keras",
    "libclang",
    "matplotlib-scalebar",
    "ml-dtypes",
    "namex",
    "opt-einsum",
    "optax>=0.2.4",
    "optree",
    "palettable",
    "pooch",
    "scikit-learn>=1.6.1",
    "seaborn",
    "seaborn-image",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow",
    "tensorflow-datasets>=4.9.3",
    "tensorflow-io-gcs-filesystem",
    "termcolor",
    "tinygrad>=0.9.2",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"
